# codex-audit-2026-05-09

./: .gitignore  00_BRIEF.md  00_BRIEF_V2_RE_AUDIT.md  00_BRIEF_V3_RE_AUDIT.md  01_INVENTORY.md  02_KNOWN_ISSUES.md  03_TIMELINE.md  04_SYSTEMD_STATE.md  05_NGINX_CONFIGS.md  SHA256SUMS  custom_vq.toml
code/newark_mirror/cyclic_rs/: Cargo.toml
code/newark_mirror/cyclic_rs/src/: clmm_math.rs  config.rs  cycle_finder.rs  grpc.rs  lib.rs  main.rs  pool_state.rs  priority_fee.rs  shadow_logger.rs
code/poly_sidecar/: CHANGELOG.md  Makefile  README.md  adp_capture.py  backtest_macro.py  backtest_polymarket.py  bls_client.py  bls_client.py.bak_pre_p3_6_5_20260509T052811Z  btc_feed.py  cpi_audit_format.py  fmp_client.py  fmp_compat.py  fmp_compat.py.bak_pre_validator_20260509T040917Z  forecasts.json  forecasts.signed  forecasts_loader.py  forecasts_loader.py.bak_pre_validator_20260509T041001Z  forecasts_validator.py  fred_calendar_client.py  fred_init.py  health_api.py  health_api.py.bak_pre_haircut_removal_20260507T201126Z  health_api.py.bak_pre_revert_20260507T093917Z  investing_client.py  kill_switch.py  log_rotator.py  macro_calendar.json  macro_calendar.json.bak_pre_kurtosis_migration_20260505T202041Z  macro_calendar.json.bak_pre_mad_20260505T071844Z  migrate_sigma_fred_kurtosis.py  pnl.py  poly_client.py  report_generator.py  report_window_stats.py  requirements.txt  restore_last_valid.sh  risk_config.json  sf_engine.py  sidecar.py  sidecar.py.bak_pre_fmp_compat_20260508T130517Z  (+7 more)
code/profitlab_quantum/: .gitignore  PIVOTE_21ENE2026.md  active_tokens.json  backtest_results.txt  backtest_results_dynamic.txt  backtest_results_top5_10.txt  check_logs.py  check_positions.py  check_recent_trades.py  check_trades.py  clean_quantum_db.py  debug_balance.py  debug_status.py  debug_true_pnl.py  deep_train_v3.py  deep_train_v3_fix.py  deep_train_v3_fix3.py  deep_train_v3_gpu.py  download_and_train.py  dump_trades.py  force_train.py  gemma_backtest.py  gemma_debug.py  inspect_db.py  main.py  main.py.bak3  main.py.bak_20260201_090835  main.py.bak_nullfix  main.py.bak_pre_tp0  offline_train.py  patch_engine_v3.py  profitlab-quantum.code-workspace  pyrightconfig.json  requirements.txt  reset_db.py  (+7 more)
code/solana_executor_rs/: .env.template  Cargo.toml
code/solana_executor_rs/data/: stats.json
code/solana_executor_rs/src/: alt_cache.rs  config.rs  metrics.rs  orca_builder.rs  pool_state.rs  pool_watcher.rs  sandwich_executor.rs  sandwich_listener.rs
gitleaks_reports/: repo_allcommits.json  v2_clean.json  v3_clean.json
systemd_units/: bot2_prime.service  bot3_prime.service  poly_log_rotator.service  poly_log_rotator.timer  profitlab_quantum_bot.service  profitlab_quantum_web.service  quantum_dashboard.service  trading_bot.service  velocityquant-pathc-healthcheck.service  velocityquant-pathc-healthcheck.timer  velocityquant-refill-sol.service  velocityquant-refill-sol.timer  velocityquant-refill-x402.service  velocityquant-refill-x402.timer  velocityquant-shadow-collector.service  velocityquant-shadow-collector.timer  velocityquant-v21-autoreport.service  velocityquant-v21-autoreport.timer  velocityquant-v3-hourly.service  velocityquant-v3-hourly.timer  vq-poly-api.service  vq-poly-sidecar.service
(+384 files in other folders)
