[package]
name = "cyclic_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ethnum = "1.5"
once_cell = "1.18"
lazy_static = "1.4"
approx = "0.5"
# Solana core
solana-sdk = "2.0"
solana-client = "2.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC Yellowstone (Chainstack — same as liquidator_rs)
yellowstone-grpc-client = "12.2"
yellowstone-grpc-proto = "12.3"
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }

# HTTP for Jito + RPC
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
bs58 = "0.5"
base64 = "0.21"
borsh = { version = "1.5", features = ["derive"] }
bincode = "1.3.3"

# Decimal arithmetic for fixed-point math
rust_decimal = "1.34"

# Concurrency / latency tools (G53/G54/G57 pedigree)
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
dashmap = "6.1"
arc-swap = "1.7"

# Env, logging, errors
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[lib]
name = "cyclic_rs"
path = "src/lib.rs"
